# C4D-Plugin-Complier

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  readme-cn.md  readme-en.md  vite.config.ts
.codex/agents/: docs-reviewer.toml  plan-checker.toml  userguide-reviewer.toml
.github/workflows/: manual-build.yml  release.yml
configs/: sdk_sources.json
docs/: CONTRIBUTING.md  SECURITY.md  USING_THIS_TEMPLATE.md  c4d-plugin-compiler-principle.md  tasks.md
docs/developer/: README.md  architecture-guide.md  bundle-optimization.md  command-system.md  cross-platform.md  data-persistence.md  i18n-patterns.md  keyboard-shortcuts.md  logging.md  menus.md  releases.md  rust-architecture.md  state-management.md  static-analysis.md  tauri-commands.md  tauri-plugins.md  testing.md  ui-patterns.md
docs/tasks-done/: c4d-plugin-compiler-plan.md
docs/userguide/: userguide.md
locales/: ar-SA.json  en-US.json  fr-FR.json  zh-CN.json
scripts/: complete-task.js  prepare-release.js
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/configs/: sdk_sources.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: build_queue.rs  compiler.rs  diagnostics.rs  mod.rs  notifications.rs  preferences.rs  recovery.rs
src-tauri/src/compiler/: build.rs  env.rs  jobs.rs  mod.rs  package.rs  sdk.rs
src-tauri/src/compiler/package/: archive.rs  fs.rs  mod.rs  naming.rs  resources.rs
src-tauri/src/compiler/sdk/: config.rs  installed.rs  mod.rs  versioning.rs
src-tauri/src/utils/: download.rs  mod.rs  platform.rs  process.rs
src/components/: ErrorBoundary.tsx  ThemeProvider.tsx
src/hooks/: useMainWindowEventListeners.ts
src/i18n/: config.ts  i18n.d.ts  index.ts  language-init.ts
src/lib/: bindings.ts  logger.ts  menu.ts  tauri-bindings.ts  updater.ts
src/services/: preferences.ts
src/store/: compiler-store.test.ts  (+3 more)
(+23 files in other folders)
