[package]
name = "c4d-plugin-compiler"
version = "0.1.7"
description = "Cinema 4D plugin compiler and packager"
authors = ["Boghma"]
license = "GPL-2.0-only"
edition = "2021"
rust-version = "1.82"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "c4d_plugin_compiler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
log = "0.4"
regex = "1"
dirs = "6"
reqwest = { version = "0.12", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "=0.0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1 # Better LLVM optimization (slower build, smaller binary)
lto = true # Link-time optimizations
opt-level = "s" # Optimize for size over speed
strip = true # Remove debug symbols
